# cath

./: .gitignore  CMakeLists.txt  README.md  data.temp
include/: BoundaryConditions.h  BvpOde.h  FiniteDiffGrid.h  LinSys.h  Matrix.h  Node.h  Plot.h  SecondOrderOde.h  Vector.h  ichtModelProblems.h  testGrid.h  testLynSys.h  testMatrix.h  testVector.h  unity.h  utils.h
src/: BoundaryConditions.c  BvpOde.c  FiniteDiffGrid.c  LinSys.c  Matrix.c  Plot.c  SecondOrderOde.c  Vector.c  main.c  utils.c
test_files/linsys/simple/: 2x2_linsys_mat.txt  2x2_linsys_sol.txt  2x2_linsys_vec.txt
test_files/matrix/: 3x3_matrix.txt  4x4_matrix.txt  rect_null_matrix.txt  wrong_format_matrix_1.txt  wrong_format_matrix_2.txt
test_files/vectors/: wrong_vector_format.txt
test_files/vectors/algebra/: neg_vec.txt  neg_vec_result.txt  scalar_prod_vec2.txt  sub_result.txt  sum_result.txt  vec_with_scalar_result.txt
tests/: ichtModelProblems.c  main.c  testGrid.c  testLynSys.c  testMatrix.c  testVector.c
